<resources>
    <string name="app_name" translatable="false">tsyc</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="skip" translatable="false">跳过</string>
    <string name="please_input_phone" translatable="false">请输入你的手机号</string>
    <string name="please_input_psw" translatable="false">请输入密码</string>
    <string name="account_lift" translatable="false">还没有账号?</string>
    <string name="account_right" translatable="false">忘记密码?</string>
    <string name="account_right_one" translatable="false">忘记密码</string>
    <string name="login" translatable="false">登录</string>
    <string name="weixin_login" translatable="false">微信快捷登录</string>
    <string name="register" translatable="false">立即注册</string>
    <string name="start_name" translatable="false">天生有才</string>
    <string name="play_get" translatable="false">点击获取</string>
    <string name="register_read" translatable="false">我已阅读并同意</string>
    <string name="register_agreement" translatable="false">《用户注册协议》</string>
    <string name="please_input_code" translatable="false">请输入验证码</string>
    <string name="please_input_invte" translatable="false">请输入邀请码</string>
    <string name="please_input_phone_code" translatable="false">请输入手机短信验证码</string>
    <string name="please_input_new_psw" translatable="false">请输入您的新密码</string>
    <string name="please_input_new_sure_psw" translatable="false">再次输入您新密码</string>
    <string name="sure" translatable="false">确定</string>
    <string name="code_send_success" translatable="false">验证码发送成功</string>
    <string name="please_psw_no">两次输入密码不一致,请重新输入</string>
    <string name="psw_changer_success">修改密码成功</string>
    <string name="bind_phone">绑定您的手机号</string>
    <string name="please_set_psw">请设置您的密码</string>
    <string name="sure_bind">确认绑定</string>
</resources>
