<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.BindPhoneActivity">
    <include layout="@layout/gm_title_layout"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/bind_phone"
              style="@style/text_28_black"
              android:layout_marginLeft="@dimen/dp_30"
              android:layout_marginRight="@dimen/dp_30"
              android:layout_marginTop="@dimen/dp_48"
              android:layout_height="wrap_content"/>
    <EditText
            style="@style/et_15_gray"
            android:inputType="number"
            android:maxLength="11"
            android:id="@+id/et_bind_phone"
            android:layout_marginTop="@dimen/dp_54"
            android:hint="@string/please_input_phone"
    />
    <View style="@style/line_height_1_margin_30"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  style="@style/margin_30"
                  android:layout_height="@dimen/dp_48">
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_bind_code"
                  android:textColor="@color/gray"
                  android:textSize="@dimen/text_15"
                  android:layout_weight="1"
                  android:inputType="number"
                  android:background="@color/transparent"
                  android:hint="@string/please_input_phone_code"
                  android:layout_height="@dimen/dp_48"/>
        <View style="@style/line_with_1"/>
        <Button android:layout_width="wrap_content"
                android:background="@color/white"
                android:text="@string/play_get"
                style="@style/text_14_bule"
                android:id="@+id/btn_bind_send_code"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <View style="@style/line_height_1_margin_30"
    />

    <EditText style="@style/et_15_gray"
              android:id="@+id/et_bind_psw"
              android:hint="@string/please_set_psw"/>
    <View style="@style/line_height_1_margin_30"
    />
    <Button android:layout_width="match_parent"
            style="@style/btn_17_bule"
            android:id="@+id/btn_bind_submit"
            android:text="@string/sure_bind"
            android:layout_marginTop="@dimen/dp_72"
            android:layout_height="wrap_content"/>
</LinearLayout>