<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.login.ForgetActivity">
  <include layout="@layout/gm_title_layout"/>
    <TextView android:layout_width="wrap_content"
              android:text="忘记密码"
              android:layout_marginTop="@dimen/dp_48"
              android:layout_marginLeft="@dimen/dp_30"
              android:textStyle="bold"
              style="@style/text_28_black"
              android:layout_height="wrap_content"/>
    <EditText android:id="@+id/et_forget_phone"
              style="@style/et_15_gray"
              android:inputType="number"
              android:maxLength="11"
              android:layout_marginTop="@dimen/dp_16"
              android:hint="@string/please_input_phone"/>
    <View style="@style/line_height_1_margin_30"

    />
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  style="@style/margin_30"
                  android:layout_height="@dimen/dp_48">
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_forget_code"
                  android:textColor="@color/text_main_bg"
                  android:textColorHint="@color/text_fu_bg"
                  android:textSize="@dimen/text_15"
                  android:layout_weight="1"
                  android:inputType="number"
                  android:background="@color/transparent"
                  android:hint="@string/please_input_phone_code"
                  android:layout_height="@dimen/dp_48"/>
        <View style="@style/line_with_1"/>
        <Button android:layout_width="wrap_content"
                android:background="@color/white"
                android:text="@string/play_get"
                style="@style/text_14_bule"
                android:id="@+id/btn_forget_send_code"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <View style="@style/line_height_1_margin_30"
         />
    <EditText
              android:id="@+id/et_forget_psw"
              style="@style/et_15_gray"
              android:inputType="textPassword"
              android:hint="@string/please_input_new_psw"
             />
    <View style="@style/line_height_1"
          android:layout_marginLeft="@dimen/dp_30"
          android:layout_marginRight="@dimen/dp_30"/>
    <EditText
              android:id="@+id/et_forget_sure_psw"
              style="@style/et_15_gray"
              android:inputType="textPassword"
              android:background="@color/transparent"
              android:hint="@string/please_input_new_sure_psw"
             />
    <View style="@style/line_height_1_margin_30"
          />

    <Button
            style="@style/btn_17_bule"
            android:text="@string/sure"
            android:id="@+id/btn_froget_sure_submit"
            android:layout_marginTop="@dimen/dp_48"
         />

</LinearLayout>