<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:focusable="true"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        tools:context=".ui.login.RegisterActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent"
                        android:background="@mipmap/jft_img_loginregistrationbackground"
                        android:layout_height="226dp">

            <ImageView android:layout_width="@dimen/dp_56"
                       android:layout_centerInParent="true"
                       android:id="@+id/iv_login_logo"
                       android:src="@mipmap/jft_bornwithtalent_logo"
                       android:layout_height="@dimen/dp_56"/>
            <TextView android:layout_width="wrap_content"
                      android:text="@string/start_name"
                      style="@style/text_20_white"
                      android:layout_marginTop="@dimen/dp_16"
                      android:layout_centerHorizontal="true"
                      android:layout_below="@id/iv_login_logo"
                      android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/dp_16"
                        style="@style/margin_38"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/dp_48">
            <ImageView android:layout_width="wrap_content"
                       android:layout_centerVertical="true"
                       android:src="@mipmap/jft_icon_smallcellphone"
                       android:id="@+id/iv_register_phone_life"
                       android:layout_height="wrap_content"/>
            <EditText android:layout_width="match_parent"
                      android:background="@color/transparent"
                      android:hint="@string/please_input_phone"
                      style="@style/text_15_main"
                      android:layout_marginLeft="@dimen/dp_16"
                      android:id="@+id/et_register_phone"
                      android:layout_centerVertical="true"
                      android:layout_marginRight="@dimen/dp_16"
                      android:layout_toLeftOf="@id/iv_register_phone_right"
                      android:layout_toRightOf="@id/iv_register_phone_life"
                      android:layout_height="match_parent"/>
            <ImageView android:layout_width="@dimen/dp_30"
                       android:layout_alignParentRight="true"
                       android:src="@mipmap/jft_but_ccose"
                       android:layout_centerVertical="true"
                       android:scaleType="center"
                       android:id="@+id/iv_register_phone_right"
                       android:layout_height="match_parent"/>
        </RelativeLayout>
        <View style="@style/line_height_1_margin_30"

        />
        <RelativeLayout android:layout_width="match_parent"
                        style="@style/margin_38"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/dp_48">
            <ImageView android:layout_width="wrap_content"
                       android:layout_centerVertical="true"
                       android:src="@mipmap/jft_icon_verificationcode"
                       android:id="@+id/iv_register_code_life"
                       android:layout_height="wrap_content"/>
            <EditText android:layout_width="match_parent"
                      android:background="@color/transparent"
                      android:hint="@string/please_input_code"
                      style="@style/text_15_main"
                      android:maxLength="6"
                      android:inputType="number"
                      android:layout_marginLeft="@dimen/dp_16"
                      android:id="@+id/et_register_code"
                      android:layout_centerVertical="true"
                      android:layout_marginRight="@dimen/dp_16"
                      android:layout_toLeftOf="@id/view_register_line"
                      android:layout_toRightOf="@id/iv_register_code_life"
                      android:layout_height="match_parent"/>
            <View android:layout_width="@dimen/dp_1"
                  android:layout_height="match_parent"
                  android:layout_marginTop="@dimen/dp_6"
                  android:id="@+id/view_register_line"
                  android:layout_toLeftOf="@id/btn_register_right"
                  android:background="@color/line"
                  android:layout_marginRight="@dimen/dp_10"
                  android:layout_marginBottom="@dimen/dp_6"/>
            <Button android:layout_width="wrap_content"
                    android:text="@string/play_get"
                    android:gravity="center"
                    android:background="@color/white"
                    android:layout_alignParentRight="true"
                    android:id="@+id/btn_register_right"
                    style="@style/text_14_bule"
                    android:layout_height="match_parent"/>
        </RelativeLayout>
        <View style="@style/line_height_1_margin_30"

        />
        <RelativeLayout android:layout_width="match_parent"
                        style="@style/margin_38"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/dp_48">
            <ImageView android:layout_width="wrap_content"
                       android:layout_centerVertical="true"
                       android:src="@mipmap/jft_icon_password"
                       android:id="@+id/iv_register_psw_life"
                       android:layout_height="wrap_content"/>
            <EditText android:layout_width="match_parent"
                      android:background="@color/transparent"
                      android:hint="@string/please_input_psw"
                      style="@style/text_15_main"
                      android:layout_marginLeft="@dimen/dp_16"
                      android:id="@+id/et_register_psw"
                      android:layout_centerVertical="true"
                      android:layout_marginRight="@dimen/dp_16"
                      android:layout_toRightOf="@id/iv_register_psw_life"
                      android:layout_height="match_parent"/>
        </RelativeLayout>
        <View style="@style/line_height_1_margin_30"

        />
        <RelativeLayout android:layout_width="match_parent"
                        style="@style/margin_38"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/dp_48">
            <ImageView android:layout_width="wrap_content"
                       android:layout_centerVertical="true"
                       android:src="@mipmap/jft_icon_invitationcode"
                       android:id="@+id/iv_register_invite_life"
                       android:layout_height="wrap_content"/>
            <EditText android:layout_width="match_parent"
                      android:background="@color/transparent"
                      android:hint="@string/please_input_invte"
                      style="@style/text_15_main"
                      android:layout_marginLeft="@dimen/dp_16"
                      android:id="@+id/et_register_invite"
                      android:layout_centerVertical="true"
                      android:layout_marginRight="@dimen/dp_16"
                      android:layout_toRightOf="@id/iv_register_invite_life"
                      android:layout_height="match_parent"/>
        </RelativeLayout>
        <View style="@style/line_height_1_margin_30"

        />
        <RelativeLayout android:layout_width="match_parent"
                        style="@style/margin_30"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/dp_48">
            <CheckBox android:layout_width="wrap_content"
                      android:paddingLeft="@dimen/dp_10"
                      android:layout_centerVertical="true"
                      android:checked="true"
                      android:gravity="center"
                      android:button="@drawable/select_register_cb"
                      android:id="@+id/cb_register_agreement_read"
                      android:src="@mipmap/jft_icon_smallcellphone"
                      android:layout_height="match_parent"/>
            <TextView android:layout_width="wrap_content"
                      android:background="@color/transparent"
                      android:text="@string/register_read"
                      style="@style/text_12_gray"
                      android:gravity="center_vertical"
                      android:layout_toRightOf="@id/cb_register_agreement_read"
                      android:id="@+id/tv_register_agreement_content"
                      android:layout_centerVertical="true"
                      android:layout_height="match_parent"/>
            <TextView android:layout_width="wrap_content"
                      android:text="@string/register_agreement"
                      android:gravity="center_vertical"
                      style="@style/text_12_bule"
                      android:layout_toRightOf="@id/tv_register_agreement_content"
                      android:id="@+id/tv_register_agreement_right"
                      android:layout_height="match_parent"/>
        </RelativeLayout>
        <Button
                style="@style/btn_17_bule"
                android:text="注册"
                android:id="@+id/btn_register_reigster"
                android:layout_marginTop="@dimen/dp_54"

        />
    </LinearLayout>
</ScrollView>